k8s/apps/automation/agentgateway/mcp/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  annotations:
    # Requires auth 
    gatus.home-operations.com/endpoint: |
      url: https://mcp.jnobrega.com/mcp
      conditions:
        - "[STATUS] == 401"
spec:
  parentRefs:
    - name: ai-internal
      namespace: automation
      sectionName: websecure
  hostnames:
    - mcp.jnobrega.com
  rules:
  - backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: mcp
    matches:
    # Main MCP endpoint to connect to the MCP server
    - path:
        type: PathPrefix
        value: /mcp
    # Path to access resource server metadata
    - path:
        type: PathPrefix
        value: /.well-known/oauth-protected-resource/mcp
    # Path to access authorization server metadata, including the
    # gateway-served client registration endpoint
    - path:
        type: PathPrefix
        value: /.well-known/oauth-authorization-server/mcp
